--- a/tps/tp1/app/src/main/res/values/strings.xml
+++ b/tps/tp1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TP1</string>
+    <string name="user_search">Recherche d\'utilisateur</string>
+    <string name="search">Rechercher</string>
+    <string name="logo_github">Logo Github</string>
 </resources>
